@@ -1,4 +1,5 @@
 0.5.0
+Redone functions menu.
 Fixed default shortcuts.
 Done toolbar search for api.
 Done toolbar search for qt5.
